# agentcompany

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
scripts/: auto_upgrade.sh
src/agent_company_ai/: __init__.py  __main__.py  config.py
src/agent_company_ai/cli/: app.py
src/agent_company_ai/core/: __init__.py  agent.py  company.py  cost_tracker.py  message_bus.py  role.py  task.py
src/agent_company_ai/dashboard/: server.py
src/agent_company_ai/dashboard/static/: app.js  index.html  style.css
src/agent_company_ai/llm/: __init__.py  anthropic.py  openai.py  router.py
src/agent_company_ai/profit_engine_templates/: agency.yaml  consulting.yaml  content.yaml  ecommerce.yaml  marketplace.yaml  saas.yaml
src/agent_company_ai/roles/: ceo.yaml  cto.yaml  developer.yaml  finance.yaml  hr.yaml  marketer.yaml  project_manager.yaml  sales.yaml  support.yaml
src/agent_company_ai/storage/: __init__.py  database.py  models.py
src/agent_company_ai/tools/: __init__.py  booking_tool.py  browser_tool.py  code_exec.py  contacts.py  content_tool.py  email_tool.py  file_io.py  gumroad_tools.py  invoice_tool.py  landing_page.py  prospect_tool.py  rate_limiter.py  registry.py  revenue_tools.py  shell.py  social_media.py  stripe_subs.py  stripe_tools.py  wallet_tools.py  web_search.py
src/agent_company_ai/wallet/: __init__.py  chains.py  keystore.py  manager.py  provider.py
src/agentcompany/: __init__.py  __main__.py  config.py
src/agentcompany/cli/: app.py
src/agentcompany/core/: __init__.py  agent.py  company.py  cost_tracker.py  message_bus.py  role.py  task.py
src/agentcompany/dashboard/: server.py
src/agentcompany/dashboard/static/: app.js  index.html  style.css
src/agentcompany/llm/: __init__.py  anthropic.py  base.py  openai.py  router.py
src/agentcompany/roles/: ceo.yaml  cto.yaml  developer.yaml  project_manager.yaml
src/agentcompany/storage/: __init__.py  database.py  models.py
src/agentcompany/tools/: __init__.py  code_exec.py  file_io.py  registry.py  shell.py  web_search.py
tests/: conftest.py  test_config.py  test_cost_tracker.py  test_task.py  test_tools_registry.py
